[gd_scene load_steps=11 format=3 uid="uid://bbq2syu2wa4vb"]

[ext_resource type="Script" path="res://scripts/minigame.gd" id="1_10l80"]
[ext_resource type="Texture2D" uid="uid://cxq4rjjdufbyc" path="res://assets/sprites/grey-and-white-checkerboard-pattern_thumb.jpg" id="2_q18v5"]
[ext_resource type="Script" path="res://scripts/scrolling.gd" id="3_wtgtc"]
[ext_resource type="Theme" uid="uid://biufirpv8wudy" path="res://assets/instruction_theme.tres" id="4_pye3p"]
[ext_resource type="Theme" uid="uid://b5i2s2wgetsyw" path="res://assets/base_theme.tres" id="5_ytku7"]
[ext_resource type="FontFile" uid="uid://cmq4tfb8ywypo" path="res://assets/fonts/PublicPixelDots.ttf" id="6_oojkj"]
[ext_resource type="Texture2D" uid="uid://cpwk852s6rdsn" path="res://assets/sprites/ui/button_blank_black.png" id="7_tbxpj"]
[ext_resource type="Texture2D" uid="uid://cx5uvxekqmydp" path="res://assets/sprites/ui/button_blank_black_pressed.png" id="8_4qv0m"]
[ext_resource type="Texture2D" uid="uid://bk7opscjjinlk" path="res://assets/sprites/ui/button_start_black.png" id="9_xhidc"]
[ext_resource type="Texture2D" uid="uid://cj7jjhry6ru8l" path="res://assets/sprites/ui/button_start_black_pressed.png" id="10_e7n4a"]

[node name="Punchline" type="Node2D"]
texture_filter = 1

[node name="MinigameController" type="Node2D" parent="."]
script = ExtResource("1_10l80")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="BottomUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="BottomUI"]
self_modulate = Color(0.478431, 0.478431, 0.478431, 1)
layout_mode = 0
offset_left = -4000.0
offset_top = -3000.0
offset_right = -674.0
offset_bottom = -652.0
scale = Vector2(2, 2)
texture = ExtResource("2_q18v5")
stretch_mode = 1
script = ExtResource("3_wtgtc")

[node name="nameText" type="RichTextLabel" parent="BottomUI"]
layout_mode = 0
offset_top = 732.0
offset_right = 1152.0
offset_bottom = 889.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_pye3p")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]joke[/center]"

[node name="nameText2" type="RichTextLabel" parent="BottomUI"]
layout_mode = 0
offset_top = 708.0
offset_right = 1152.0
offset_bottom = 741.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("5_ytku7")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]the joke is...[/center]"
fit_content = true

[node name="input" type="TextEdit" parent="BottomUI"]
layout_mode = 0
offset_left = 198.0
offset_top = 889.0
offset_right = 950.0
offset_bottom = 1102.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_pye3p")
theme_override_fonts/font = ExtResource("6_oojkj")
wrap_mode = 1
caret_blink = true

[node name="finishButton" type="TextureButton" parent="BottomUI"]
layout_mode = 0
offset_left = 436.0
offset_top = 1120.0
offset_right = 564.0
offset_bottom = 1160.0
scale = Vector2(2, 2)
focus_mode = 1
texture_normal = ExtResource("7_tbxpj")
texture_pressed = ExtResource("8_4qv0m")

[node name="helpText" type="RichTextLabel" parent="BottomUI/finishButton"]
layout_mode = 0
offset_left = 15.5
offset_top = 7.0
offset_right = 115.5
offset_bottom = 28.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_pye3p")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[pulse freq=0.4 color=#000000 ease=-1.0]finish"
fit_content = true

[node name="TopUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="TopUI"]
self_modulate = Color(0.458824, 0.458824, 0.458824, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="nameText" type="RichTextLabel" parent="TopUI"]
layout_mode = 0
offset_left = 420.0
offset_top = 61.0
offset_right = 717.0
offset_bottom = 157.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_pye3p")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]Player 1[/center]"
fit_content = true

[node name="instructions" type="RichTextLabel" parent="TopUI"]
layout_mode = 0
offset_left = 317.0
offset_top = 220.0
offset_right = 821.0
offset_bottom = 388.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_pye3p")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "You are given input from the king and must continue the story/plot/whatever. The best contribution will be chosen by the King."
fit_content = true

[node name="startButton" type="TextureButton" parent="TopUI"]
texture_filter = 1
layout_mode = 0
offset_left = 436.0
offset_top = 460.0
offset_right = 564.0
offset_bottom = 502.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_xhidc")
texture_pressed = ExtResource("10_e7n4a")

[connection signal="pressed" from="BottomUI/finishButton" to="MinigameController" method="_on_finish_button_pressed"]
[connection signal="pressed" from="TopUI/startButton" to="MinigameController" method="_on_start_button_pressed"]
